# activ

./: .env  Cargo.toml  README.md  configuration.yaml  docker-compose.yml
migrations/: 20220328123816_create_subscriptions_table.sql
src/: lib.rs  main.rs  startup.rs
src/controllers/: health_check.rs  subscriptions.rs
tests/: service_test.rs
